kuber/arrstack/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        volumeMounts:
        - name: radarr-config
          mountPath: /config
        ports:
        - containerPort: 7878
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: vpn-config
        configMap:
          name: vpn-config
