kuber/arrstack/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - name: radarr
    port: 7878
    targetPort: 7878
  - name: metrics
    port: 9708
    targetPort: 9708
